arquivo para aula do professor Claudio Matos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
@@ -10,12 +11,10 @@
   text-align: center;
   font-family: arial;
 }
-
 .title {
   color: grey;
   font-size: 18px;
 }
-
 button {
   border: none;
   outline: 0;
@@ -42,7 +41,7 @@ button:hover, a:hover {
 </head>
 <body>
 
-<h2 style="text-align:center">Perfil do usuário</h2>
+<h2 style="text-align:center">Pauloitalo77</h2>
 
 <div class="card">
   <img src="homer2.jpeg" alt="Homer" style="width:100%">
