versão com imagem e botoes alterado

--- a/index.html
+++ b/index.html
@@ -44,17 +44,15 @@ button:hover, a:hover {
 <h2 style="text-align:center">Pauloitalo77</h2>
 
 <div class="card">
-  <img src="homer2.jpeg" alt="Homer" style="width:100%">
-  <h1>Homer Simpson</h1>
-  <p class="title">CEO & Fundador, Simpson T.I</p>
+  <img src="pillars_of_creation.jpeg" alt="Pilares da Criacao" style="width:100%">
+  <h1>Pilares da Criação</h1>
+  <p class="title">Pillars of Creation by NASA</p>
   <p>UNIDESC</p>
   <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="https://github.com/pauloitalo77"><i class="fa fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/paulo-italo-21009b21a/"><i class="fa fa-linkedin"></i></a>
   </div>
-  <p><button>Contato</button></p>
+  <p><a href =˜mailto:pauloitalo77@gmail.com><button>Contato</button></a></p>
 </div>
 
 </body>
